css/styles.css
.people h1 {
  margin-bottom: 1rem;
}
.people h2 {
  display: flex;
  justify-content: space-between;
}
.people h2 span {
  transform: rotate(0deg);
  transition-delay: 50ms;
  transition: all 450ms ease-in-out;
}
.people h2 span.rotated {
  transform: rotate(-540deg);
}
.people .people-group {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
  gap: 2rem;
}
.people .people-group .textblock {
  display: flex;
  flex-direction: column;
}
.people .people-group .textblock h2 {
  border-bottom: 2px solid #000;
  padding: 0.75rem;
}
.people .people-group .textblock .card-actions {
  margin-top: auto;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}
.people .people-group .textblock .card-actions a:first-child:last-child {
  margin-left: auto;
}
.people .people-group .top_dog h2 {
  border: 0;
}
.people .people-group .top_dog h3 {
  padding: 0 0.75rem 0.75rem;
  border-bottom: 2px solid #000;
  font-size: 1.2rem;
}
.people article:not(.leaders) p.contracted_text {
  -webkit-box-orient: vertical;
  display: -webkit-box;
  -webkit-line-clamp: 6;
  overflow: hidden;
  text-overflow: ellipsis;
}
.people .alumni h2 {
  font-size: 1.5rem;
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
}
.people .alumni ul {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}
.people .alumni ul li {
  font-size: 1.25rem;
  font-weight: bold;
  border: 2px solid #000;
  padding: 0.5rem;
  text-align: center;
}
.people .alumni ul li:has(a) {
  border-color: blue;
  padding: 0;
}
.people .alumni ul li:has(a) a {
  display: block;
  padding: 0.5rem;
  color: #000;
  text-decoration: none;
}
.people .textblock img {
  width: 100%;
  height: auto;
  border-bottom: 2px solid #000;
  display: block;
  aspect-ratio: 1/1;
  object-fit: cover;
  object-position: top;
  user-select: none;
}

.text_truncator {
  -webkit-box-orient: vertical;
  display: -webkit-box;
  -webkit-line-clamp: 8;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: normal;
}

.contact .textblock {
  max-width: 30rem;
  margin-top: 1rem;
}
@media only screen and (max-width: 640px) {
  .contact .textblock {
    max-width: 55rem;
  }
}
.contact ul {
  list-style-type: disc;
}
.contact .big-logo {
  left: unset;
  right: 2rem;
}

.projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
}
.projects h1 span {
  transform: rotate(0deg);
  transition-delay: 50ms;
  transition: all 450ms ease-in-out;
}
.projects h1 span.rotated {
  transform: rotate(-540deg);
}
.projects .textblock {
  display: flex;
  flex-direction: column;
  max-height: 90rem;
}
.projects .textblock h1 {
  margin: 0;
  padding-top: 0.25rem;
}
.projects .textblock .card-actions {
  margin-top: auto;
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
}
.projects img {
  width: 100%;
  height: auto;
  border-bottom: 2px solid #000;
  max-height: 100rem;
  transition: max-height 1s linear;
  overflow: hidden;
}

.projectpages img {
  max-width: 100%;
  height: auto;
}
.projectpages .pictures {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
  gap: 1rem;
}
.projectpages .pictures img {
  width: 100%;
  object-fit: cover;
}
.projectpages iframe {
  max-width: 100%;
}

.section-heading {
  margin: 1.2rem 3rem;
}

@media only screen and (max-width: 640px) {
  .projects {
    grid-template-columns: 1fr;
  }
}
.papers {
  display: flex;
  flex-direction: column;
}
.papers .textblock {
  max-width: 75rem;
  margin-bottom: 2rem;
}
.papers .textblock .window__paper {
  border-bottom: 2px solid #000;
}
.papers .textblock .window__paper a {
  font-weight: bold;
  margin-top: 0;
}
.papers .textblock :last-child {
  border-bottom: none;
}

.blog {
  display: flex;
  flex-direction: column;
}
.blog h1 {
  display: flex;
  justify-content: space-between;
}
.blog h1 span {
  transform: rotate(0deg);
  transition-delay: 50ms;
  transition: all 450ms ease-in-out;
}
.blog h1 span.rotated {
  transform: rotate(-540deg);
}
.blog .textblock {
  max-width: 75rem;
  margin-bottom: 2rem;
}
.blog img {
  width: 100%;
  height: auto;
  border-bottom: 2px solid #000;
  max-height: 100rem;
  transition: max-height 1s linear;
  overflow: hidden;
}

.classes {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 1rem;
}
.classes .textblock {
  display: flex;
  flex-direction: column;
}
.classes .textblock h1 {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin: 0;
  padding-top: 0.25rem;
}
.classes .textblock p,
.classes .textblock ol {
  margin: 0.75rem;
}
.classes .textblock span, .classes .textblock a {
  margin: 0.75rem;
  font-weight: bold;
}

@media only screen and (max-width: 640px) {
  .classes {
    grid-template-columns: 1fr;
  }
}
.events {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: flex-start;
  list-style-position: inside;
}
.events .textblock {
  margin-bottom: 1rem;
  max-width: 70rem;
}
.events .textblock h2,
.events .textblock p, .events .textblock ol {
  margin: 0.75rem;
}
.events .textblock h3 {
  margin: 0 0.75rem;
}
.events .info {
  max-width: 20rem;
}
.events .schedule {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.events .schedule h1 {
  flex: 0 0 100%;
}
.events .schedule h2 {
  text-decoration-line: underline;
}
.events .schedule p {
  margin: 0 0.75rem;
}
.events .schedule section {
  max-width: 300px;
}
.events .schedule section :last-child {
  margin-bottom: 0.75rem;
}
@media only screen and (max-width: 640px) {
  .events .info {
    max-width: 25rem;
  }
}

:root {
  --logo-purple: #3a2163;
  --logo-orange: #fbb040;
  --logo-yellow: #f9ed32;
  --logo-green: #8dc63f;
  --logo-teal: #00a79d;
  --logo-red: #be1e2d;
  --logo-pink: #ec008c;
  --logo-orange-red: #ef4136;
  --logo-blue: #2e3192;
}

.cls-1, .cls-2, .cls-3, .cls-4, .cls-5,
.cls-6, .cls-7, .cls-8, .cls-9, .cls-10,
.cls-11, .cls-13 {
  fill: none;
  stroke-miterlimit: 10;
}
/* ... */

